Sigmoid added in place of Softmax model for training; Training logic also added as feature that works on request (button press)